app/web: Fix alignment with word-wrapped results

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -165,10 +165,12 @@ td.size {
 td.path {
   font-family: roboto-light;
   text-align: right;
+  vertical-align: top;
 }
 
 td.name {
   text-align: left;
+  vertical-align: bottom;
 }
 
 footer {
